[gd_scene load_steps=98 format=2]

[ext_resource path="res://src/game/entities/enemies/DetectionArea.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/green_circle.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/enemies/shadow/Enemy-Melee-Idle-S.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/enemies/shadow/destello.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/enemies/shadow/Enemy-Melee-Idle-SE.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/enemies/shadow/Enemy-Melee-Death.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/enemies/shadow/Enemy-Melee-Attack-SW.png" type="Texture" id=7]
[ext_resource path="res://src/game/entities/enemies/ShadowStateMachine.gd" type="Script" id=8]
[ext_resource path="res://src/game/entities/enemies/shadow/states/DieState.gd" type="Script" id=9]
[ext_resource path="res://src/game/entities/enemies/shadow/states/IdleState.gd" type="Script" id=10]
[ext_resource path="res://src/game/entities/enemies/shadow/states/FlyState.gd" type="Script" id=11]
[ext_resource path="res://src/game/entities/enemies/shadow/Shadow.gd" type="Script" id=12]
[ext_resource path="res://src/game/entities/enemies/shadow/ShadowProjectile.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/game/entities/enemies/shadow/states/AlertState.gd" type="Script" id=14]

[sub_resource type="CanvasItemMaterial" id=81]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=80]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 2048, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 2304, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 2560, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 2816, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 3072, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 3328, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 3584, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 3840, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 4096, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 4352, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 4608, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 4864, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 5120, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 5376, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 5632, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 5888, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2048, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2304, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2560, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 2816, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3072, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3328, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3584, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 3840, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4096, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4352, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4608, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 4864, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 5120, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 5376, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 5632, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 5888, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2048, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2304, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2560, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2816, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1792, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2048, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2304, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2560, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 2816, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "attack",
"speed": 40.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ) ],
"loop": true,
"name": "fly",
"speed": 10.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=82]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=83]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 18.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 104.58

[sub_resource type="Animation" id=84]
resource_name = "alert"

[sub_resource type="Animation" id=85]
resource_name = "death"

[sub_resource type="Animation" id=86]
resource_name = "fly"

[sub_resource type="Animation" id=87]
resource_name = "idle"

[node name="Shadow" type="KinematicBody2D"]
modulate = Color( 1, 0, 0, 1 )
collision_layer = 4
collision_mask = 16
collision/safe_margin = 3.539
script = ExtResource( 12 )
wander_radius = Vector2( 1, 1 )
projectile_scene = ExtResource( 13 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 8 )
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = [ NodePath("Idle"), NodePath("Fly"), NodePath("Alert"), NodePath("Die") ]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
state_id = "idle"

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
wait_time = 3.0
one_shot = true

[node name="Fly" type="Node" parent="StateMachine"]
script = ExtResource( 11 )
state_id = "fly"
wander_radius = Vector2( 50, 50 )
speed = 5.0
max_speed = 100.0

[node name="Alert" type="Node" parent="StateMachine"]
script = ExtResource( 14 )
state_id = "alert"

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 9 )
state_id = "die"

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0, -18.0339 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 0.294118, 0.00784314, 0.00784314, 1 )
material = SubResource( 81 )
position = Vector2( -2, -17 )
scale = Vector2( 0.11, 0.11 )
process_material = SubResource( 80 )
texture = ExtResource( 4 )

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 0, -13 )
scale = Vector2( 0.355469, 0.297526 )
frames = SubResource( 7 )
animation = "idle"
frame = 4
playing = true

[node name="HpProgress" type="ProgressBar" parent="."]
margin_left = -10.0
margin_top = 7.0
margin_right = 10.0
margin_bottom = 10.0
custom_styles/fg = SubResource( 82 )
custom_styles/bg = SubResource( 83 )
max_value = 5.0
step = 1.0
value = 3.0
percent_visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -14 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -6, -13 )
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
position = Vector2( 4, -12 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="green_circle" type="Sprite" parent="DetectionArea"]
modulate = Color( 1, 1, 1, 0.301961 )
position = Vector2( 1.00001, 2 )
scale = Vector2( 0.56, 0.595 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="BodyAnimation" type="AnimationPlayer" parent="."]
anims/alert = SubResource( 84 )
anims/death = SubResource( 85 )
anims/fly = SubResource( 86 )
anims/idle = SubResource( 87 )

[connection signal="hit" from="." to="StateMachine" method="notify_hit"]
[connection signal="hp_changed" from="." to="StateMachine" method="_on_Shadow_hp_changed"]
[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_IdleTimer_timeout"]
[connection signal="animation_finished" from="Body" to="StateMachine" method="_on_Body_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="StateMachine" method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="StateMachine" method="_on_DetectionArea_body_exited"]
